monitoring/k8s/app_python/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-edu-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: pechersky.python.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app_python
            port:
              number: 8080
